--- a/src/output.css
+++ b/src/output.css
@@ -16,6 +16,8 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-2xl: 42rem;
+    --container-5xl: 64rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -809,6 +811,16 @@
       right: 12vw;
     }
   }
+  .max-sm\:mx-1 {
+    @media (width < 40rem) {
+      margin-inline: calc(var(--spacing) * 1);
+    }
+  }
+  .max-sm\:mx-10 {
+    @media (width < 40rem) {
+      margin-inline: calc(var(--spacing) * 10);
+    }
+  }
   .max-sm\:mx-auto {
     @media (width < 40rem) {
       margin-inline: auto;
@@ -849,14 +861,49 @@
       margin-top: 20vh;
     }
   }
+  .max-sm\:ml-0 {
+    @media (width < 40rem) {
+      margin-left: calc(var(--spacing) * 0);
+    }
+  }
+  .max-sm\:ml-5 {
+    @media (width < 40rem) {
+      margin-left: calc(var(--spacing) * 5);
+    }
+  }
+  .max-sm\:ml-\[0vw\] {
+    @media (width < 40rem) {
+      margin-left: 0vw;
+    }
+  }
   .max-sm\:ml-\[5vw\] {
     @media (width < 40rem) {
       margin-left: 5vw;
     }
   }
+  .max-sm\:block {
+    @media (width < 40rem) {
+      display: block;
+    }
+  }
   .max-sm\:hidden {
     @media (width < 40rem) {
       display: none;
+    }
+  }
+  .max-sm\:w-2xl {
+    @media (width < 40rem) {
+      width: var(--container-2xl);
+    }
+  }
+  .max-sm\:w-5xl {
+    @media (width < 40rem) {
+      width: var(--container-5xl);
+    }
+  }
+  .max-sm\:w-\[10\%\] {
+    @media (width < 40rem) {
+      width: 10%;
     }
   }
   .max-sm\:w-\[12\%\] {
@@ -869,9 +916,19 @@
       width: 15%;
     }
   }
+  .max-sm\:w-\[20\%\] {
+    @media (width < 40rem) {
+      width: 20%;
+    }
+  }
   .max-sm\:w-\[22\%\] {
     @media (width < 40rem) {
       width: 22%;
+    }
+  }
+  .max-sm\:w-\[30\%\] {
+    @media (width < 40rem) {
+      width: 30%;
     }
   }
   .max-sm\:w-\[40\%\] {
@@ -889,14 +946,34 @@
       width: 70%;
     }
   }
+  .max-sm\:w-\[80\%\] {
+    @media (width < 40rem) {
+      width: 80%;
+    }
+  }
   .max-sm\:w-\[90\%\] {
     @media (width < 40rem) {
       width: 90%;
     }
   }
+  .max-sm\:w-\[98\%\] {
+    @media (width < 40rem) {
+      width: 98%;
+    }
+  }
+  .max-sm\:w-\[100\%\] {
+    @media (width < 40rem) {
+      width: 100%;
+    }
+  }
   .max-sm\:px-4 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:px-10 {
+    @media (width < 40rem) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .max-sm\:text-center {
