--- a/src/output.css
+++ b/src/output.css
@@ -816,6 +816,11 @@
       margin-inline: calc(var(--spacing) * 1);
     }
   }
+  .max-sm\:mx-4 {
+    @media (width < 40rem) {
+      margin-inline: calc(var(--spacing) * 4);
+    }
+  }
   .max-sm\:mx-10 {
     @media (width < 40rem) {
       margin-inline: calc(var(--spacing) * 10);
@@ -824,6 +829,11 @@
   .max-sm\:mx-auto {
     @media (width < 40rem) {
       margin-inline: auto;
+    }
+  }
+  .max-sm\:my-4 {
+    @media (width < 40rem) {
+      margin-block: calc(var(--spacing) * 4);
     }
   }
   .max-sm\:mt-0 {
@@ -864,6 +874,11 @@
   .max-sm\:ml-0 {
     @media (width < 40rem) {
       margin-left: calc(var(--spacing) * 0);
+    }
+  }
+  .max-sm\:ml-3 {
+    @media (width < 40rem) {
+      margin-left: calc(var(--spacing) * 3);
     }
   }
   .max-sm\:ml-4 {
@@ -961,6 +976,11 @@
       width: 90%;
     }
   }
+  .max-sm\:w-\[95\%\] {
+    @media (width < 40rem) {
+      width: 95%;
+    }
+  }
   .max-sm\:w-\[98\%\] {
     @media (width < 40rem) {
       width: 98%;
@@ -969,6 +989,11 @@
   .max-sm\:w-\[100\%\] {
     @media (width < 40rem) {
       width: 100%;
+    }
+  }
+  .max-sm\:justify-start {
+    @media (width < 40rem) {
+      justify-content: flex-start;
     }
   }
   .max-sm\:px-4 {
@@ -984,6 +1009,11 @@
   .max-sm\:text-center {
     @media (width < 40rem) {
       text-align: center;
+    }
+  }
+  .max-sm\:text-start {
+    @media (width < 40rem) {
+      text-align: start;
     }
   }
   .max-sm\:text-\[0\.8rem\] {
