--- a/src/output.css
+++ b/src/output.css
@@ -16,8 +16,6 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-2xl: 42rem;
-    --container-5xl: 64rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -261,6 +259,9 @@
   }
   .mt-7 {
     margin-top: calc(var(--spacing) * 7);
+  }
+  .mt-\[2vh\] {
+    margin-top: 2vh;
   }
   .mt-\[5vh\] {
     margin-top: 5vh;
@@ -578,9 +579,6 @@
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
   }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
-  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -686,10 +684,6 @@
   }
   .grayscale {
     --tw-grayscale: grayscale(100%);
-    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-  }
-  .grayscale-0 {
-    --tw-grayscale: grayscale(0%);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .filter {
@@ -801,11 +795,6 @@
       }
     }
   }
-  .max-sm\:visible {
-    @media (width < 40rem) {
-      visibility: visible;
-    }
-  }
   .max-sm\:absolute {
     @media (width < 40rem) {
       position: absolute;
@@ -821,64 +810,19 @@
       right: 12vw;
     }
   }
-  .max-sm\:mx-1 {
-    @media (width < 40rem) {
-      margin-inline: calc(var(--spacing) * 1);
-    }
-  }
-  .max-sm\:mx-4 {
-    @media (width < 40rem) {
-      margin-inline: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:mx-10 {
-    @media (width < 40rem) {
-      margin-inline: calc(var(--spacing) * 10);
-    }
-  }
   .max-sm\:mx-auto {
     @media (width < 40rem) {
       margin-inline: auto;
     }
   }
-  .max-sm\:my-4 {
+  .max-sm\:mt-\[5vh\] {
     @media (width < 40rem) {
-      margin-block: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:mt-0 {
-    @media (width < 40rem) {
-      margin-top: calc(var(--spacing) * 0);
-    }
-  }
-  .max-sm\:mt-10 {
-    @media (width < 40rem) {
-      margin-top: calc(var(--spacing) * 10);
-    }
-  }
-  .max-sm\:mt-14 {
-    @media (width < 40rem) {
-      margin-top: calc(var(--spacing) * 14);
-    }
-  }
-  .max-sm\:mt-\[10vh\] {
-    @media (width < 40rem) {
-      margin-top: 10vh;
+      margin-top: 5vh;
     }
   }
   .max-sm\:mt-\[15vh\] {
     @media (width < 40rem) {
       margin-top: 15vh;
-    }
-  }
-  .max-sm\:mt-\[18vh\] {
-    @media (width < 40rem) {
-      margin-top: 18vh;
-    }
-  }
-  .max-sm\:mt-\[20vh\] {
-    @media (width < 40rem) {
-      margin-top: 20vh;
     }
   }
   .max-sm\:ml-0 {
@@ -891,11 +835,6 @@
       margin-left: calc(var(--spacing) * 1.5);
     }
   }
-  .max-sm\:ml-2 {
-    @media (width < 40rem) {
-      margin-left: calc(var(--spacing) * 2);
-    }
-  }
   .max-sm\:ml-3 {
     @media (width < 40rem) {
       margin-left: calc(var(--spacing) * 3);
@@ -904,16 +843,6 @@
   .max-sm\:ml-4 {
     @media (width < 40rem) {
       margin-left: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:ml-5 {
-    @media (width < 40rem) {
-      margin-left: calc(var(--spacing) * 5);
-    }
-  }
-  .max-sm\:ml-\[0vw\] {
-    @media (width < 40rem) {
-      margin-left: 0vw;
     }
   }
   .max-sm\:ml-\[5vw\] {
@@ -931,21 +860,6 @@
       display: none;
     }
   }
-  .max-sm\:w-2xl {
-    @media (width < 40rem) {
-      width: var(--container-2xl);
-    }
-  }
-  .max-sm\:w-5xl {
-    @media (width < 40rem) {
-      width: var(--container-5xl);
-    }
-  }
-  .max-sm\:w-\[10\%\] {
-    @media (width < 40rem) {
-      width: 10%;
-    }
-  }
   .max-sm\:w-\[12\%\] {
     @media (width < 40rem) {
       width: 12%;
@@ -956,19 +870,9 @@
       width: 15%;
     }
   }
-  .max-sm\:w-\[20\%\] {
-    @media (width < 40rem) {
-      width: 20%;
-    }
-  }
   .max-sm\:w-\[22\%\] {
     @media (width < 40rem) {
       width: 22%;
-    }
-  }
-  .max-sm\:w-\[30\%\] {
-    @media (width < 40rem) {
-      width: 30%;
     }
   }
   .max-sm\:w-\[40\%\] {
@@ -986,11 +890,6 @@
       width: 70%;
     }
   }
-  .max-sm\:w-\[80\%\] {
-    @media (width < 40rem) {
-      width: 80%;
-    }
-  }
   .max-sm\:w-\[90\%\] {
     @media (width < 40rem) {
       width: 90%;
@@ -1004,11 +903,6 @@
   .max-sm\:w-\[96\%\] {
     @media (width < 40rem) {
       width: 96%;
-    }
-  }
-  .max-sm\:w-\[97\%\] {
-    @media (width < 40rem) {
-      width: 97%;
     }
   }
   .max-sm\:w-\[98\%\] {
@@ -1031,21 +925,6 @@
       justify-content: flex-start;
     }
   }
-  .max-sm\:px-0 {
-    @media (width < 40rem) {
-      padding-inline: calc(var(--spacing) * 0);
-    }
-  }
-  .max-sm\:px-2 {
-    @media (width < 40rem) {
-      padding-inline: calc(var(--spacing) * 2);
-    }
-  }
-  .max-sm\:px-3 {
-    @media (width < 40rem) {
-      padding-inline: calc(var(--spacing) * 3);
-    }
-  }
   .max-sm\:px-3\.5 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 3.5);
@@ -1054,11 +933,6 @@
   .max-sm\:px-4 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:px-10 {
-    @media (width < 40rem) {
-      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .max-sm\:text-center {
@@ -1125,9 +999,7 @@ body {
   }
 }
 .progress-bar {
-  margin: 2vh 0 0 8vw;
   border: 1px solid rgb(48, 47, 47);
-  width: 70%;
   height: 5vh;
   background-color: rgb(48, 47, 47);
   border-radius: 10px;
